Update tutorials, Readme and requirements
tutorial

tutorial

tutorial

tutorial

tutorial

tutorial

tutorial

requirements

readme

readme

quickstart

--- a/doc/tutorials/training/quickstart.ipynb
+++ b/doc/tutorials/training/quickstart.ipynb
@@ -6,18 +6,22 @@
    "source": [
     "# RecStudio4Industry Training Tutorial\n",
     "\n",
-    "RecStudio4Industry is a recommendation system development toolkit aimed at industrial internet applications. It inherits the modular design concept of RecStudio, aiming to help algorithm engineers quickly experiment with various modules by modularizing recommendation system models. Additionally, it adds industry-friendly features beyond RecStudio, supporting the rapid construction and deployment of industrial internet recommendation systems. The main industry-friendly features are as follows:\n",
+    "RecStudio4Industry is the first [Pytorch](https://pytorch.org/)-based recommendation system development toolkit aimed at industrial internet applications. It inherits the modular design concept of [RecStudio](https://github.com/USTCLLM/RecStudio), aiming to help algorithm engineers quickly experiment with various modules by modularizing recommendation system models. Additionally, it adds industry-friendly features beyond RecStudio, supporting the rapid construction and deployment of industrial internet recommendation systems. \n",
     "\n",
-    "- Support for HDFS system training data reading. Unlike the small-batch datasets used in academia, industrial-level data is often very large and needs to be stored daily in the HDFS distributed file system. Therefore, RecStudio4Industry provides HDFS data reading interfaces to facilitate rapid integration with industrial scenario data.\n",
-    "- Distributed model training. The huge amount of industrial data often demands higher training time, so RecStudio4Industry offers distributed training interfaces to facilitate rapid distributed training of industrial-level recommendation system models.\n",
-    "- Support for the deployment of industrial-level recommendation systems. RecStudio4Industry provides interfaces for the deployment of industrial-level recommendation systems, supporting the rapid deployment of well-trained models into multi-stage recommendation systems in the industrial internet. This includes data caching based on Redis, among others.\n",
+    "The key industry features are as follows:\n",
+    "\n",
+    "- It supports reading data from local and distributed file systems, such as HDFS. Unlike the small-batch datasets used in academia, industrial-level data is often very large and needs to be stored daily in the HDFS distributed file system. Therefore, RecStudio4Industry provides HDFS data reading interfaces to facilitate rapid integration with industrial scenario data. But it still supports reading data from local files for debugging.\n",
+    "\n",
+    "- It supports various training configurations including single-machine single-card, single-machine multi-card, and distributed multi-machine multi-card training for the engineer's diverse devlopment needs. The huge amount of industrial data often demands higher training time, so RecStudio4Industry offers distributed training interfaces to facilitate rapid distributed training of industrial recommendation models. What's more, we utilize the [Accelerate](https://huggingface.co/docs/transformers/accelerate) to wrap the training process. It allows the engineer to switch between training and debugging by modifying a fews lines of code. \n",
+    "\n",
+    "- It supports easily deploying recommendation models into the industrial internet and severing the customer's request. RecStudio4Industry contains a high performance inference engine to satisfy the requirements online request's latency. The inference engine compresses the data using [Protocol Buffers](https://github.com/protocolbuffers/protobuf) firstly. It then stores the compressed data into the key-value database [Redis](https://redis.io/). And finally, [ONNX](https://onnx.ai/), [TensorRT](https://github.com/NVIDIA/TensorRT), and [Faiss](https://github.com/facebookresearch/faiss) are integrated into the inference engine to speed up the inference process. \n",
     "\n",
     "The following tutorial will provide a detailed introduction on how to use RecStudio4Industry for model training, including the following detailed requirements:\n",
     "\n",
-    "1. Configuration of training data\n",
-    "2. Model configuration and custom model building\n",
-    "3. Single-machine training and distributed multi-machine training of models\n",
-    "4. Saving and reading of models\n"
+    "1. Configuration of training data.\n",
+    "2. Model configuration and custom model building.\n",
+    "3. Lanuch training under local and distributed environments.\n",
+    "4. Saving and reading of models.\n"
    ]
   },
   {
@@ -26,13 +30,13 @@
    "source": [
     "## Data Configuration\n",
     "\n",
-    "Due to the vast amount of data in industrial recommendation systems, distributed systems are often used for storage and retrieval, with HDFS being a commonly used distributed system. RecStudio4Industry supports storing data in HDFS and using it for training. Below, we will use the RecFlow full-link recommendation dataset published by KuaiShou as an example to illustrate the organization of data.\n",
+    "Due to the vast amount of data in industrial recommendation systems, distributed systems are often used for storage and retrieval, with HDFS being a commonly used distributed system. RecStudio4Industry supports storing data in HDFS and using it for training. Below, we will use the RecFlow, an industrial full flow recommendation dataset, published by KuaiShou as an example to illustrate the organization of data.\n",
     "\n",
-    "1. User Data Logs. This part of the data is generally used to record user interactions with items, such as clicks and collections. Specifically, each time a user refreshes while browsing videos, a request is sent to the system, which is then processed algorithmically. The system is funnel-shaped with multiple stages, ultimately returning 10-20 candidate items to the user, and the user's interactions with these items are fed back into the system, forming a data record. This typically includes: Request ID, User ID, User Features, Item ID, Item Features, User Historical Behavior, Interaction Time, etc. Due to the volume of user data logs, they are often divided into files on a daily basis, such as 2019-07-01.csv, 2019-07-02.csv, etc. In the RecFlow dataset, daily user data logs are stored as xxx.feather files.\n",
+    "1. Daily Interaction Logs. This part of the data is generally used to record user interactions with items, such as clicks and conversions. Specifically, each time a user refreshes while browsing videos, a request is sent to the system, which is then processed algorithmically. The system is funnel-shaped with multiple stages, ultimately returning 10-20 candidate items to the user, and the user's interactions with these items are fed back into the system, forming a data record. This typically includes: Request ID, User ID, User Features, Item ID, Item Features, User Historical Behavior, Interaction Time, etc. Due to the volume of user data logs, they are often divided into files on a daily basis, such as 2019-07-01.csv, 2019-07-02.csv, etc. In the RecFlow dataset, daily user data logs are stored as YYYY-MM-DD.feather files. [Feather](https://arrow.apache.org/docs/python/feather.html) is a compact file format for storing Arrow tables or data frames and can save lots of storage space. Such logs are mainly used for training and testing of recommendation models.\n",
     "\n",
-    "2. Item Data Files. This part of the data often includes information on all items on the platform, organized in the form of a KV table, where the key is the item ID and the value is a series of features of the item, such as on a short video platform: the creator of the video, the category of the video, the duration of the video, video tags, etc.\n",
+    "2. Item Corpus Information. This part of the data often includes information of item corpus on the platform, organized in the form of a key-value format, where the key is the item ID and the value is a series of features of the item, such as on a short video platform: the creator of the video, the category of the video, the duration of the video, video tags, etc. It will mostly be utilized for training and inferring of recommendation retrieval models. \n",
     "\n",
-    "3. User Behavior Sequence Files. This part of the data stores the user's behavior sequence, representing the user's historical interactions, organized in the form of a KV table, where the key is the request ID and the value is the behavior sequence corresponding to that request ID.\n",
+    "3. Behavior Sequence Records. This part of the data stores the user's behavior sequence, representing the user's historical interactions, organized in the form of a key-value format, where the key is the request ID and the value is the behavior sequence corresponding to that request ID. We store the user's behavior sequence separately instead of intergrate it with the interaction logs to reduce storage costs. The storage of behavior sequence is heavy and there will exist lots of repeated sequence data if intergrated in interaction logs. The behaivor sequence records play an important role in user modeling and appears in the whole pipeline of industrial recommendation systems.\n",
     "\n",
     "The template for the dataset configuration file is as follows:\n",
     "\n",
@@ -40,26 +44,26 @@
     "{\n",
     "    \"name\": \"Dataset Name (required)\",\n",
     "    \"type\": \"Dataset type, such as hdfs or file (required)\",\n",
-    "    \"url\": \"The location of the dataset interaction data, such as hdfs://127.0.0.1:8020/recstudio/recflow/daily_logs (required)\",\n",
+    "    \"url\": \"The location of the dataset interaction data, such as hdfs://ip_address:port/recstudio/recflow/daily_logs (required)\",\n",
     "    \"file_format\": \"Data storage format, such as feather, parquet, pkl, etc. Default is auto, which means automatic detection.\",\n",
     "    \"date_format\": \"Date format, such as %Y-%m-%d. Default is %Y-%m-%d.\",\n",
     "    \"item_col\": \"Item ID column name (required)\",\n",
-    "    \"context_features\": [\"List of context features used\", \"Feature 1\", \"Feature 2\", \"(required)\"],\n",
+    "    \"context_features\": [\"List of context (user-side and contextual) features used\", \"Feature 1\", \"Feature 2\", \"(required)\"],\n",
     "    \"item_features\": [\"List of item features used\", \"context_features and item_features must not overlap, both are column names in the main table\", \"(required)\"],\n",
     "    \"labels\": [\"List of labels used\", \"Multiple labels generally indicate multi-task training\", \"The label list must not be empty\", \"(required)\"],\n",
     "    \"filter_settings\": {\n",
     "        \"Filter feature name\": [\"Filter condition 1\", \"Filter condition 2\", \"Filter conditions are in the form of (==, !=, >=, <=, >, <)[number]\"],\n",
-    "        \"like\": [\"==1\"],\n",
+    "        \"effective_view\": [\"==1\"],\n",
     "        \"purpose\": \"Generally used for filtering by label, for example, the recall model needs to retain only samples with label=1, and negative samples are sampled from the candidate item set\"\n",
     "    },\n",
     "    \"item_info\": {\n",
-    "        \"url\": \"The storage location of the candidate item information data for the recall model, such as hdfs://127.0.0.1:8020/recstudio/recflow/others/video_info.pkl, required for recall models\",\n",
+    "        \"url\": \"The storage location of the candidate item information data for the recall model, such as hdfs://ip_address:port/recstudio/recflow/others/video_info.pkl, required for recall models\",\n",
     "        \"key\": \"The column name of the item ID. Must be provided for dataframe-style files, not needed for dict-style files\",\n",
     "        \"columns\": [\"Column names of the item feature table, required in item_info, especially for dict file feature naming\"],\n",
     "        \"use_cols\": [\"List of features to be used in item_info, if empty, all columns are used\"]\n",
     "    },\n",
     "    \"user_sequential_info\": {\n",
-    "        \"url\": \"The storage location of the user sequence data, such as hdfs://127.0.0.1:8020/recstudio/recflow/daily_logs. Setting user_sequential_info to null indicates that an independent sequence file is not used\",\n",
+    "        \"url\": \"The storage location of the user sequence data, such as hdfs://ip_address:port/recstudio/recflow/seq_effective_50. Setting user_sequential_info to null indicates that an independent sequence file is not used\",\n",
     "        \"file_format\": \"Sequence data storage format, such as feather, parquet, pkl, etc. Default is auto, which means automatic detection.\",\n",
     "        \"key\": \"The key value for querying sequence data index, such as request_id. This value must also exist in the interaction data table.\",\n",
     "        \"columns\": [\"Column names of the sequence feature table, required in item_info, especially for dict file feature naming, generally the same as or a subset of item_features\"],\n",
@@ -68,7 +72,7 @@
     "    \"stats\": {\n",
     "        \"Feature 1\": 6,\n",
     "        \"Feature 2\": 10,\n",
-    "        \"(required)\": \"The number of discrete features\"\n",
+    "        \"(required)\": \"The cardinality of each feature\"\n",
     "    },\n",
     "    \"train_settings\": {\n",
     "        \"start_date\": \"2024-01-13 (required), the start date of the training data\",\n",
@@ -91,7 +95,7 @@
     "    \"item_col\": \"video_id\",\n",
     "    \"context_features\": [\"user_id\", \"device_id\", \"age\", \"gender\", \"province\"],\n",
     "    \"item_features\": [\"video_id\", \"author_id\", \"category_level_two\", \"upload_type\", \"category_level_one\"],\n",
-    "    \"labels\": [\"like\"],\n",
+    "    \"labels\": [\"effective_view\"],\n",
     "    \"filter_settings\": {\n",
     "        \"effective_view\": [\"==1\"]\n",
     "    },\n",
@@ -121,7 +125,7 @@
     "        \"upload_type\": 40\n",
     "    },\n",
     "    \"train_settings\": {\n",
-    "        \"start_date\": \"2024-01-13\",\n",
+    "        \"start_date\": \"2024-02-17\",\n",
     "        \"end_date\": \"2024-02-18\"\n",
     "    },\n",
     "    \"test_settings\": {\n",
@@ -131,7 +135,8 @@
     "}\n",
     "```\n",
     "\n",
-    "With this, the dataset configuration file is complete. Subsequently, RecStudio4Industry can automatically generate a DataLoader based on the configuration.\n"
+    "With this, the dataset configuration file is complete. Subsequently, RecStudio4Industry can automatically generate a DataLoader based on the configuration.\n",
+    "Before stepping into the details of RecStudio4Industry, you need to download the data of [RecFlow's learning folder](https://rec.ustc.edu.cn/share/f8e5adc0-2e57-11ef-bea5-3b4cac9d110e) for learning. When downloading, you can put it into your server's local file system or [HDFS](https://hadoop.apache.org/). After you faimilar with RecStudio4Industry, you can download the whole RecFlow dataset or other recommendation datasets for further research. "
    ]
   },
   {
@@ -169,11 +174,11 @@
     "\n",
     "    ```json\n",
     "    {\n",
-    "        \"embedding_dim\": 8,\n",
+    "        \"embedding_dim\": 4,\n",
     "        \"mlp_layers\": [128, 128],\n",
     "        \"prediction_layers\": [32],\n",
     "        \"activation\": \"relu\",\n",
-    "        \"dropout\": 0.3,\n",
+    "        \"dropout\": 0.1,\n",
     "        \"batch_norm\": false\n",
     "    }\n",
     "    ```\n",
@@ -187,7 +192,7 @@
     "        \"eval_batch_size\": 4096,\n",
     "        \"optimizer\": \"adam\",\n",
     "        \"learning_rate\": 1e-2,\n",
-    "        \"checkpoint_dir\": \"saves/ranker\",\n",
+    "        \"checkpoint_dir\": \"path_to_save_checkpoint\",\n",
     "        \"checkpoint_steps\": 1000,\n",
     "        \"evaluation_strategy\": \"epoch\",\n",
     "        \"eval_interval\": 1,\n",
@@ -212,9 +217,9 @@
     "from rs4industry.model.rankers import MLPRanker\n",
     "from rs4industry.trainer import Trainer\n",
     "\n",
-    "data_config_path = \"../../../examples/config/data/recflow_ranker.json\"\n",
-    "train_config_path = \"../../../examples/config/mlp_ranker/train.json\"\n",
-    "model_config_path = \"../../../examples/config/mlp_ranker/model.json\"\n",
+    "data_config_path = \"../../../examples/config/data/recflow_ranker.json\" # path to the data config file\n",
+    "train_config_path = \"../../../examples/config/mlp_ranker/train.json\"   # path to the train config file, you need to set the checkpoint_dir\n",
+    "model_config_path = \"../../../examples/config/mlp_ranker/model.json\"   # path to the model config file\n",
     "\n",
     "(train_data, eval_data), data_config = get_datasets(data_config_path)\n",
     "\n",
@@ -249,7 +254,7 @@
    "source": [
     "This section will demonstrate how to train custom models by inheriting base classes. We will show the custom usage of recall and ranking models, to illustrate the interfaces that need to be configured for two-tower and single-tower models.\n",
     "\n",
-    "First, the first two steps are the same as using built-in models, which require environment setup:\n",
+    "First, the first two steps are the same as using built-in models, which require environment setup if you have done so:\n",
     "\n",
     "1. Clone RecStudio4Industry to your local machine and install the dependencies."
    ]
@@ -264,7 +269,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt  "
+    "pip install -r requirements.txt  "
    ]
   },
   {
@@ -284,7 +289,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt  "
+    "export PYTHONPATH=$PYTHONPATH:/path/to/recstudio-industry"
    ]
   },
   {
