check training and update training tutorials

--- a/doc/tutorials/training/quickstart.ipynb
+++ b/doc/tutorials/training/quickstart.ipynb
@@ -532,17 +532,24 @@
    "source": [
     "RecStudio4Industry supports basic single-machine single-GPU training, single-machine multi-GPU training, and distributed training. Below are the introductions on how to use RecStudio4Industry for single-machine single-GPU training, single-machine multi-GPU training, and distributed training.\n",
     "\n",
-    "1. Single-machine single-GPU training: Directly start with the Python command\n",
+    "1. Single-machine single-GPU training: Directly start with the Python command or start with `accelerate` command (the configuration file of accelerate refer to [single_gpu.json](../../../examples/distributed_training/single_node.json)).\n",
     "\n",
     "   ```shell\n",
-    "   python main.py\n",
+    "   # start with Python command\n",
+    "   CUDA_VISIBLE_DEVICES=1 python main.py\n",
+    "   # start with accelerate command\n",
+    "   accelerate launch --config_file single_gpu.json main.py\n",
     "   ```\n",
     "\n",
     "2. Single-machine multi-GPU training: First, configure for single-machine multi-GPU, refer to the example file [configuration file single_node.json](../../../examples/distributed_training/single_node.json). Then start with the accelerate command.\n",
     "\n",
-    "   ```shell\n",
-    "   accelerate launch --config_file single_node.json main.py\n",
-    "   ```\n",
+    "    ```shell\n",
+    "    accelerate launch --config_file single_node.json main.py\n",
+    "    ```\n",
+    "\n",
+    "    Note that multi-GPU training on a single machine will by default occupy port 29500 on the local machine. If you need to run multiple tasks, you need to specify different port numbers in the command or in the JSON file: --main_process_port 29501 (specified in the command line) or \"main_process_port\": 29501 (JSON file).\n",
+    "\n",
+    "    In addition, the current training methods for both single-machine multi-GPU and multi-machine multi-GPU environments adopt DistributedDataParallel (DDP). During the training process, each process will save a complete model and optimizer on the corresponding GPU. Additionally, each GPU maintains a \"bucket\" to gather gradients from other GPUs during training. Therefore, during model preparation, twice the model size of GPU memory overhead will be occupied than training with a single GPU. For more details, please refer to: [blog1](https://discuss.pytorch.org/t/memory-consumption-for-the-model-get-doubled-after-wrapped-with-ddp/130837), [blog2](https://medium.com/deep-learning-for-protein-design/a-comprehensive-guide-to-memory-usage-in-pytorch-b9b7c78031d3).\n",
     "\n",
     "3. Multi-machine multi-GPU distributed training:\n",
     "    - Configure the environment on multiple machines, download RecStudio4Industry, and install dependencies.\n",
@@ -550,7 +557,18 @@
     "    \n",
     "    ```shell\n",
     "    accelerate launch --config_file multi_node_rank0.json main.py\n",
-    "    ```\n"
+    "    ```\n",
+    "\n",
+    "\n",
+    "Note:\n",
+    "All the acclerate configuration files mentioned above are created by `accelerate config` command.\n",
+    "\n",
+    "```shell\n",
+    "accelerate config --config_file xxx.json\n",
+    "```\n",
+    "\n",
+    "The you need to select the corresponding options according to your needs in an interactive way.\n",
+    "For more details, please refer to the [accelerate](https://github.com/huggingface/accelerate) documentation.\n"
    ]
   },
   {
