--- a/doc/tutorials/training/quickstart.zh.ipynb
+++ b/doc/tutorials/training/quickstart.zh.ipynb
@@ -532,17 +532,24 @@
    "source": [
     "RecStudio4Industry支持基础的单机单卡训练、单机多卡训练和分布式训练，下面分别介绍如何使用RecStudio4Industry进行单机单卡训练、单机多卡训练和分布式训练。\n",
     "\n",
-    "1. 单机单卡训练：直接使用python指令启动\n",
+    "1. 单机单卡训练：直接使用python指令启动或者可以使用accelerate命令启动(accelerate示例配置文件参考[single_gpu.json](../../../examples/distributed_training/single_gpu.json)\n",
     "\n",
-    " ```shell\n",
-    " python main.py\n",
-    " ```\n",
+    "    ```shell\n",
+    "    #  使用python指令启动\n",
+    "    CUDA_VISIBLE_DEVICES=1 python main.py\n",
+    "    # 使用accelerate命令启动\n",
+    "    accelerate launch --config_file single_gpu.json main.py\n",
+    "    ```\n",
     "\n",
     "2. 单机多卡训练：先进行单机多卡的配置，示例文件参考[配置文件single_node.json](../../../examples/distributed_training/single_node.json)。而后使用accelerate命令启动。\n",
     "\n",
-    "  ```shell\n",
-    "  accelerate launch --config_file single_node.json main.py\n",
-    "  ```\n",
+    "    ```shell\n",
+    "    accelerate launch --config_file single_node.json main.py\n",
+    "    ```\n",
+    "\n",
+    "    注意，单机多卡训练会默认占用本机端口29500。如果需要起多个任务，需要在命令中或者json文件中指定不同的端口号：`--main_process_port 29501` （命令行指定） 或者 \"main_process_port\": 29501 （json 文件）。\n",
+    "\n",
+    "    另外，单机多卡以及多机多卡训练目前采用的都是DistributedDataParallel（DDP）的训练方式，在训练过程中，每个进程都会在对应的GPU上保存一份完整的模型、优化器，另外还会在每个GPU上维护“bucket”用于收集训练时候来自其他卡的gradient，因此在模型prepare时候会占用两倍模型大小的显存开销。详情请参考[blog1](https://discuss.pytorch.org/t/memory-consumption-for-the-model-get-doubled-after-wrapped-with-ddp/130837), [blog2](https://medium.com/deep-learning-for-protein-design/a-comprehensive-guide-to-memory-usage-in-pytorch-b9b7c78031d3).\n",
     "\n",
     "3.  多机多卡分布式训练：\n",
     "    - 多台机器上都进行环境配置，下载recstudoudio4industry，并安装依赖。\n",
@@ -550,7 +557,16 @@
     "    \n",
     "    ```shell\n",
     "    accelerate launch --config_file multi_node_rank0.json main.py\n",
-    "    ```"
+    "    ```\n",
+    "\n",
+    "\n",
+    "注意，以上所有accelerate的配置文件都可以自己通过accelerate命令生成，即：\n",
+    "\n",
+    "  ```shell\n",
+    "  accelerate config --config_file xxx.json\n",
+    "  ```\n",
+    "\n",
+    "而后根据需求在交互式的命令行中选择对应的配置。更多详细的解释用法参考[accelerate](https://github.com/huggingface/accelerate)文档。"
    ]
   },
   {
@@ -591,13 +607,6 @@
     "\n",
     "trainer.evaluation(eval_data)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
